add aboutme section and image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
             <li><div class="home">HOME</div></li>
             <li><span class="about">ABOUT</span></li>
-            <li><span class="education">EDUCATION</span></li>
             <li><span class="skills">SKILLS</span></li>
             <li><span class="vision">VISION</span></li>
             <li><span class="contacts">CONTACTS</span></li>
@@ -28,26 +27,41 @@
         </div>
         <div class="name">
         <h1><span class="name1">Halima</span> Cheptoo <span class="name1">Yahya</span></h1>
-        <h2>Full Stack Developer</h2>
+        <h3>Full Stack Developer</h>
         </div>
         <div class="info">
          <div class="information"> 
 
         <h2>Hello!</h2>
-        <p> I am a tech enthusiast driven by the will to explore the rising technology.</br>
-           A student currently enrolled in Moringa School Prep Program.</br>
-           A firm believer that you can get anything you want if you are hungry enough.</br>
-           and more so, 
+        <p> I am a junior software developer from Moringa school</br>
+            who is passionate about programming and the beauty of knowing it.</br>
+            Here is how my journey has been so far.
         </p> 
         </div>   
        <div id = "halima">
-           <img src="/assets/halima.jpg" alt="profile" width="400px" height="300px">
+           <img src="/assets/halima.jpg" alt="profile" width="400px" height="300px" border-radius="20px 20px">
        </div>
         </div>  
       </div>
     </div>
     <div class="aboutme">
-        <h1>About Me</h1>
+        <h1><span id="aboutme1">About Me</span></h1>
+        <div class="abt-image">
+    <div id="halima2">
+        <img src="/assets/halima2.jpg" alt="second profile" width="300px" height="200px">
+    </div> 
+    <div class="indepth">
+        <p>i have always been amazed at how techology can solve 
+            daily challanges we face. From hiring a taxi, to food delivery 
+            to robotics. It is incredible that we as humans could develop such projects.
+            Of course it is a challenging thing to do but i draw inspiration
+            knowing that expert software developers were once beginners like me and i am a step 
+            toward the right direction by joining Moringa school. Other that programming,
+            i am a huge fan of music, adventures and documentaries.
+            
+        </p>
+    </div>
+    </div>  
     </div>
 </body>
 </html>
