--- a/index.html
+++ b/index.html
@@ -63,5 +63,10 @@
     </div>
     </div>  
     </div>
+    <div class="skills">
+        <h2>My Skills</h2>
+        <div class="languages"></div>
+        <p>below are some of my projects done based on the skills above</p>
+    </div>
 </body>
 </html>
