add projects from github

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
             <li><div class="home">HOME</div></li>
             <li><span class="about">ABOUT</span></li>
-            <li><span class="skills">SKILLS</span></li>
-            <li><span class="vision">VISION</span></li>
+            <li><span class="skill">SKILLS</span></li>
             <li><span class="contacts">CONTACTS</span></li>
         </div> 
         </ul>
@@ -67,6 +66,12 @@
         <h2>My Skills</h2>
         <div class="languages"></div>
         <p>below are some of my projects done based on the skills above</p>
+        <div class="projects">
+       <div class="project1"> <a href="https://halima254.github.io/favourite_band/"> <img src="/assets/band.jpg" alt="Favourite Band" height="200px" width="200px"></a> </div>  
+        <div class="project2"> <a href="https://halima254.github.io/anitas-kitchen/"> <img src="/assets/anitas.jpg" alt="Anita's Kitchen" height="200px" width="200px"></a> </div>  
+        <div class="project3"> <a href="https://halima254.github.io/easy-talk/"> <img src="/assets/easy.jpg" alt="Easy Talk" height="200px" width="200px"></a> </div>  
+        </div>
     </div>
+
 </body>
 </html>
