add social media links

--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
         </div>  
         </div>
     </div>
+    <div class="contacts">
+        <h3>Find me on</h3>
+        <div class="socialmedia">
+        <div class="facebook"> <a href=""> <img src="/assets/fb.png" alt="Easy Talk" height="50px" width="50px"></a> 
+
+        </div>
+        <div class="linked">
+            <a href=""> <img src="/assets/link.png" alt="Easy Talk" height="50px" width="50px"></a> 
+
+        </div>
+        <div class="twitter">
+            <a href=""> <img src="/assets/twitt.png" alt="Easy Talk" height="50px" width="50px"></a> 
+
+        </div>
+    </div>
+    </div>
 
 </body>
 </html>
