--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="aboutme">
-        <h1><span id="aboutme1">About Me</span></h1>
+        <h1 class="me">About Me</h1>
         <div class="abt-image">
     <div id="halima2">
         <img src="/assets/halima2.jpg" alt="second profile" width="300px" height="200px">
@@ -63,9 +63,9 @@
     </div>  
     </div>
     <div class="skills">
-        <h2>My Skills</h2>
+        <h2 class="title">My Skills</h2>
         <div class="languages"></div>
-        <p>below are some of my projects done based on the skills above</p>
+        <p class="webs">below are some of my projects done based on the skills above</p>
         <div class="projects">
        <div class="project1"> <a href="https://halima254.github.io/favourite_band/"> <img src="/assets/band.jpg" alt="Favourite Band" height="200px" width="200px"></a>
        <p>Favourite band</br>
@@ -92,17 +92,26 @@
         </div>
     </div>
     <div class="contacts">
-        <h3>Find me on</h3>
+        <h3 class="social">Find me on</h3>
         <div class="socialmedia">
-        <div class="facebook"> <a href=""> <img src="/assets/fb.png" alt="Easy Talk" height="50px" width="50px"></a> 
-
+        <div class="facebook"> <a href=""> <img src="/assets/fb.png" alt="Halima Yahya" height="50px" width="50px"></a> 
+         <p>Halima Yahya</p>
         </div>
         <div class="linked">
-            <a href=""> <img src="/assets/link.png" alt="Easy Talk" height="50px" width="50px"></a> 
-
+            <a href=""> <img src="/assets/link.png" alt="Halima Yahya" height="50px" width="50px"></a> 
+            <p>Halima Yahya</p>
         </div>
         <div class="twitter">
-            <a href=""> <img src="/assets/twitt.png" alt="Easy Talk" height="50px" width="50px"></a> 
+            <a href=""> <img src="/assets/twitt.png" alt="Halima Yahya" height="50px" width="50px"></a> 
+            <p>Halima Yahya</p>
+        </div>
+        <div class="email">
+            <a href=""> <img src="/assets/email.png" alt="halima.yahya@student.moringa.com" height="50px" width="50px"></a> 
+          <p>halima.yahya@student.moringaschool.com</p>
+        </div>
+        <div class="phone">
+            <a href=""> <img src="/assets/phone.png" alt="Halima Yahya" height="50px" width="50px"></a> 
+            <p>+2547223344</p>
 
         </div>
     </div>
