add footer section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
         </div>
     </div>
     </div>
+  <div class="footer">
+      <p class="copyright">Copyright @ 2021 || Porfolio created by Halima Yahya</p>
+  </div>  
 
 </body>
 </html>
