change border radius

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     
     <div class="introduction">
-        <div class="menu">
+        <div class="menu" id="home">
          <h4>Halima</h4>  
          <ul>
-             <li>HOME</li>
-             <li>ABOUT</li>
+             <li><a href="#home">HOME</a></li>
+             <li><a href="#about">ABOUT</a></li>
              <li>SKILLS</li>
              <li>CONTACTS</li>
          </ul>
@@ -44,12 +44,12 @@
         </p> 
         </div>   
        <div id = "halima">
-           <img src="/assets/halima.jpg" alt="profile" width="400px" height="300px" border-radius="20px 20px">
+           <img src="/assets/halima.jpg" alt="profile" width="400px" height="400px">
        </div>
         </div>  
       </div>
     </div>
-    <div class="aboutme">
+    <div class="aboutme" id="about">
         <h1 class="me">About Me</h1>
         <div class="abt-image">
     <div id="halima2">
