add image correctiions

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </p> 
         </div>   
        <div id = "halima">
-           <img src="/assets/halima.jpg" alt="profile" width="400px" height="400px">
+           <img src="./assets/halima.jpg" alt="profile" width="400px" height="400px">
        </div>
         </div>  
       </div>
@@ -45,7 +45,7 @@
         <h1 class="me">About Me</h1>
         <div class="abt-image">
     <div id="halima2">
-        <img src="/assets/halima2.jpg" alt="second profile" width="300px" height="200px">
+        <img src="./assets/halima2.jpg" alt="second profile" width="300px" height="200px">
     </div> 
     <div class="indepth">
         <p>i have always been amazed at how techology can solve 
@@ -92,23 +92,23 @@
     <div class="contacts">
         <h3 class="social">Find me on</h3>
         <div class="socialmedia">
-        <div class="facebook"> <a href=""> <img src="/assets/fb.png" alt="Halima Yahya" height="50px" width="50px"></a> 
+        <div class="facebook"> <a href=""> <img src="./assets/fb.png" alt="Halima Yahya" height="50px" width="50px"></a> 
          <p>Halima Yahya</p>
         </div>
         <div class="linked">
-            <a href=""> <img src="/assets/link.png" alt="Halima Yahya" height="50px" width="50px"></a> 
+            <a href=""> <img src="./assets/link.png" alt="Halima Yahya" height="50px" width="50px"></a> 
             <p>Halima Yahya</p>
         </div>
         <div class="twitter">
-            <a href=""> <img src="/assets/twitt.png" alt="Halima Yahya" height="50px" width="50px"></a> 
+            <a href=""> <img src="./assets/twitt.png" alt="Halima Yahya" height="50px" width="50px"></a> 
             <p>Halima Yahya</p>
         </div>
         <div class="email">
-            <a href=""> <img src="/assets/email.png" alt="halima.yahya@student.moringa.com" height="50px" width="50px"></a> 
+            <a href=""> <img src="./assets/email.png" alt="halima.yahya@student.moringa.com" height="50px" width="50px"></a> 
           <p>halima.yahya@student.moringaschool.com</p>
         </div>
         <div class="phone">
-            <a href=""> <img src="/assets/phone.png" alt="Halima Yahya" height="50px" width="50px"></a> 
+            <a href=""> <img src="./assets/phone.png" alt="Halima Yahya" height="50px" width="50px"></a> 
             <p>+2547223344</p>
 
         </div>
