add all changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
              <li><a href="#home">HOME</a></li>
              <li><a href="#about">ABOUT</a></li>
              <li><a href="#skills">SKILLS</a></li>
-             <li>CONTACTS</li>
+             <li><a href="#contacts">CONTACTS</a></li>
          </ul>
          
       
@@ -60,7 +60,7 @@
     </div>
     </div>  
     </div>
-    <div class="skills">
+    <div class="skills" id="skills">
         <h2 class="title">My Skills</h2>
         <div class="languages"></div>
         <p class="webs">below are some of my projects done based on the skills above</p>
@@ -89,7 +89,7 @@
         </div>  
         </div>
     </div>
-    <div class="contacts">
+    <div class="contacts" id="contacts">
         <h3 class="social">Find me on</h3>
         <div class="socialmedia">
         <div class="facebook"> <a href=""> <img src="./assets/fb.png" alt="Halima Yahya" height="50px" width="50px"></a> 
