add images border-radius

--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
         <div class="languages"></div>
         <p class="webs">below are some of my projects done based on the skills above</p>
         <div class="projects">
-       <div class="project1"> <a href="https://halima254.github.io/favourite_band/"> <img src="./assets/band.jpg" alt="Favourite Band" height="200px" width="200px"></a>
+       <div class="project1" id="project1"> <a href="https://halima254.github.io/favourite_band/"> <img src="./assets/band.jpg" alt="Favourite Band" height="200px" width="200px"></a>
        <p>Favourite band</br>
         Get to know Little Mix!</br>
         (languages: html&css)
 
        </p>
       </div>  
-        <div class="project2"> <a href="https://halima254.github.io/anitas-kitchen/"> <img src="./assets/anitas.jpg" alt="Anita's Kitchen" height="200px" width="200px"></a> 
+        <div class="project2" id="project2"> <a href="https://halima254.github.io/anitas-kitchen/"> <img src="./assets/anitas.jpg" alt="Anita's Kitchen" height="200px" width="200px"></a> 
        <p>Anita's Kitchen</br>
         Take a comprehensive look</br>
         at Anita's Kitchen Menu.</br>
         (Languages: html&css)
        </p>
         </div>  
-        <div class="project3"> <a href="https://halima254.github.io/easy-talk/"> <img src="./assets/easy.jpg" alt="Easy Talk" height="200px" width="200px"></a> 
+        <div class="project3" id="project3"> <a href="https://halima254.github.io/easy-talk/"> <img src="./assets/easy.jpg" alt="Easy Talk" height="200px" width="200px"></a> 
         <p>Easy Talk </br>
            This Project adresses Mental</br>
             health</br>
