--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
     </div>
     <div class="skills" id="skills">
         <h2 class="title">My Skills</h2>
-        <div class="languages"></div>
+        <div class="languages">
+          <P><strong>HTML 5 - 90%</strong></P>
+          <P><strong>HCSS 3 - 80%</strong></P>
+          <P><strong>Javascript - 70%</strong></P>
+         </div>
         <p class="webs">below are some of my projects done based on the skills above</p>
         <div class="projects">
        <div class="project1" id="project1"> <a href="https://halima254.github.io/favourite_band/"> <img src="./assets/band.jpg" alt="Favourite Band" height="200px" width="200px"></a>
